--- a/.project
+++ b/.project
@@ -25,4 +25,21 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 		<nature>de.innot.avreclipse.core.avrnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Wire</name>
+			<type>2</type>
+			<locationURI>ArduinoPath/hardware/arduino/avr/libraries/Wire</locationURI>
+		</link>
+		<link>
+			<name>arduino</name>
+			<type>2</type>
+			<locationURI>ArduinoPath/hardware/arduino/avr/cores/arduino</locationURI>
+		</link>
+		<link>
+			<name>standard</name>
+			<type>2</type>
+			<locationURI>ArduinoPath/hardware/arduino/avr/variants/standard</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
